--- a/Basic code/styles/assets.css
+++ b/Basic code/styles/assets.css
@@ -6,25 +6,35 @@
 
 /* Das Burger-Icon ist JETZT IMMER sichtbar */
 .burger-bar {
-    display: flex; /* Vorher war hier 'none' */
+    padding-right: 70px;
+    width: 60px;
+    height: 60px;
+    display: flex; 
+    align-items: center;
+    justify-content: center;
     cursor: pointer;
     flex-direction: column;
     gap: 5px;
     z-index: 101; /* Damit es über dem Menü liegt */
 }
 
+
 .bar {
-    width: 30px;
-    height: 4px;
+    box-sizing: border-box;
+    padding: 0 10px;
+    gap: 5px;
+    width: 40px;
+    height: 5px;
     background-color: white;
     transition: 0.3s;
 }
+
 
 /* Das Menü ist standardmäßig versteckt (rechts außerhalb) */
 .nav-links {
     position: fixed;
     right: -100%; /* Komplett aus dem Bild geschoben */
-    top: 0;
+    top: 128px;
     width: 300px; /* Breite des Menüs */
     height: 128px; /* Volle Bildschirmhöhe */
     background-color: #444;
@@ -39,10 +49,12 @@
     padding: 0;
 }
 
+
 /* Wenn 'active' per JS hinzugefügt wird, gleitet es rein */
 .nav-links.active {
     right: 0;
 }
+
 
 .nav-links a {
     color: white;
