--- a/Basic code/style.css
+++ b/Basic code/style.css
@@ -2,8 +2,6 @@
     --header-nav-background-color:#E76C1F ;
     --reviews-background-color: #FACAAC;
     --fontColor-color: #363534;
-
-
 }
 
 
@@ -65,6 +63,7 @@ header nav {
     justify-content: center;
 }
 
+
 .burgerBigLogo {
 width: 200px;
 height: 200px;
@@ -72,9 +71,9 @@ opacity: 1;
 padding-top: 332px;
 left: 620px;
 border-width: 13px;
-
-
 }
+
+
 .burgerBigLogo img {
 width: 100%;
 height: 100%;
@@ -85,18 +84,19 @@ border-color:  #FDEADC;
 border-width: 13px;
 }
 
+
 .headerTitle {
     width:100%;
-    height: 243px;
-    
+    height: 243px;   
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
 }
 
+
 .headerSlogan {
-    font-family: Palanquin;
+font-family: Palanquin;
 font-weight: 700;
 font-style: Bold;
 font-size: 24px;
@@ -104,8 +104,8 @@ leading-trim: NONE;
 line-height: 120%;
 letter-spacing: 0%;
 text-align: center;
-
 }
+
 
 .title {
     height: 75px;
@@ -113,9 +113,8 @@ text-align: center;
     display: flex;
     justify-content: center;
     align-items: center;
-    
-    
 }
+
 
 h1 {
     font-family: Palanquin Dark;
@@ -126,16 +125,16 @@ h1 {
     line-height: 120%;
     letter-spacing: 0%;
     text-align: center;
-    
-
 }
+
 
 .titleColorOrange {
     color: var(--header-nav-background-color);
 }
+
+
 .titleColorBlack {
     color: var(--fontColor-color);
-;
 }
 
 
@@ -151,17 +150,17 @@ h1 {
     justify-content: center;
     align-items: center;
     background-color: var(--reviews-background-color);
-
-
 }
-.reviews img  {
 
+
+.reviews img  {
     width: 24px;
     height: 23px;
     angle: 0 deg;
     opacity: 1;
     border-radius: 0.5px;
 }
+
 
 .reviewsRating {
     width: 25px;
@@ -175,55 +174,75 @@ h1 {
     leading-trim: NONE;
     line-height: 120%;
     letter-spacing: 0%;
-
 }
-
-
 
 
 .reviewsVote {
 width: 35px;
 height: 22px;
-angle: 0 deg;
 opacity: 1;
 font-family: Palanquin;
 font-weight: 400;
 font-style: Regular;
 font-size: 18px;
-leading-trim: NONE;
 line-height: 120%;
 letter-spacing: 0%;
-
-
 }
 
 
 footer {
     width: 100%;
-    height: 128;
-    angle: 0 deg;
+    height: 128px;
     opacity: 1;
     gap: 10px;
     box-sizing: border-box;
     padding-top: 32px;
-    padding-right: 514px;
+    /* padding-right: 514px; */
     padding-bottom: 32px;
-    padding-left: 514px;
+    /* padding-left: 514px; */
     background-color: var(--header-nav-background-color);
-
+    color: #D9D9D9;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 
+footer section {
+    width: 530px;
+    height: 24px; 
+    opacity: 1;
+    gap: 72px;
+    max-width: 1440px;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
 
 
+footer p {
+font-family: Palanquin;
+font-weight: 400;
+font-style: Regular;
+font-size: 18px;
+}
 
 
+.copyright {
+width: 180px;
+height: 24px;
+gap: 4px;
+display: flex;
+justify-content: center;
+align-items: center;
+}
 
-/* font-family: Palanquin Dark;
-font-weight: 700;
-font-style: Bold;
-font-size: 48px;
-leading-trim: NONE;
-line-height: 120%;
-letter-spacing: 0%;
-text-align: center; */
+
+.copyrightImg {
+    width: 24px;
+    height: 24px;
+    opacity: 1;
+}
+
+
