--- a/Basic code/styles/assets.css
+++ b/Basic code/styles/assets.css
@@ -63,3 +63,11 @@
 }
 
 
+.buttenAddBasket {
+    font-size: 16px;
+    border: 0;
+    padding: 5px 10px;
+    background-color: #FFFFFF;
+    border-radius: 20px;
+    color: #363534;
+}
