--- a/Basic code/style.css
+++ b/Basic code/style.css
@@ -18,6 +18,7 @@ body{
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    overflow-x: hidden
 }
 
 
@@ -254,7 +255,7 @@ main {
     display: flex;
     justify-content: flex-end;
     align-items: flex-start;
-    /* neu */
+    
     position: relative;
     z-index: 0;
 
@@ -265,7 +266,7 @@ main {
     width: 100%;
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: flex-start;
     flex-direction: column;
 
 
@@ -275,6 +276,7 @@ main {
 .sectionCourt {
     width: 100%;
     height: auto;
+    box-sizing: border-box;
 
 }
 
@@ -294,7 +296,8 @@ main {
 .sectionTitle {
     max-width: 1440px;
     width: 100%;
-    padding-left: 120px;
+    padding-left: 100px;
+    box-sizing: border-box;
     display: flex;
     justify-content: flex-start;
     align-items: center;
@@ -318,11 +321,9 @@ main {
 /* court */
 .BurgerSandwiches {
 
-    width: 100%;
+    width: calc(100% - 340px);
     max-width: 1440px ;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    box-sizing: border-box;
 
 }
 
@@ -331,14 +332,11 @@ main {
 
 .newMenu {
     width: 100%;
-    
-    padding: 16px 0 16px 120px;
+    padding: 16px 0 16px 100px;
     box-sizing: border-box;
     display: flex;
-    justify-content: left;
+    justify-content: center;
     align-items: center;
-
-
 }
 
 .court {
