--- a/Basic code/styles/assets.css
+++ b/Basic code/styles/assets.css
@@ -10,7 +10,7 @@
     cursor: pointer;
     flex-direction: column;
     gap: 5px;
-    z-index: 101; /* Damit es über dem Menü liegt */
+    z-index: 1; /* Damit es über dem Menü liegt */
 }
 
 
@@ -69,11 +69,17 @@
 
 .basketSection {
     width: 320px;
-
     height: 100%;
     position: absolute;
     z-index: 1; 
-    /* right: -100%; Komplett aus dem Bild geschoben */
+    flex-grow: 1;
+    /* Komplett aus dem Bild geschoben */
+    transform: translateX(100%); 
+    transition: transform 0.3s ease-in-out;
+}
+
+.basketSection.open {
+    transform: translateX(0);
 }
 
 
@@ -93,6 +99,7 @@
     margin: 0;
     box-sizing: border-box;
     padding: 16px 16px;
+
     
     /* neu */
     position: sticky;
@@ -101,8 +108,6 @@
      justify-self: end; 
     /* am rechten Rand der Spalte ausrichten */
 }
-
-
 
 
 .basketHeader {
